feat: job search

--- a/app.json
+++ b/app.json
@@ -5,6 +5,19 @@
       "bundler": "metro"
     },
     "name": "jobs",
-    "slug": "jobs"
+    "slug": "jobs",
+    "extra": {
+      "eas": {
+        "projectId": "ff2c0126-82de-42a2-913d-8a628cf66f71"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/ff2c0126-82de-42a2-913d-8a628cf66f71"
+    },
+    "android": {},
+    "ios": {}
   }
 }
